--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -36,5 +36,13 @@ target_link_libraries( confusionMatrix PRIVATE  ${LIBS}    )
 target_compile_features( confusionMatrix PRIVATE cxx_std_17)
 add_dependencies(confusionMatrix dlib fmt )
 
+
+### Protein Time Series Generator
+add_executable( protein2ts protein2ts.cpp )
+target_include_directories( protein2ts PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
+target_link_libraries( protein2ts PRIVATE  ${LIBS} )
+target_compile_features( protein2ts PRIVATE cxx_std_17)
+add_dependencies(protein2ts fmt)
+
 # Install the executable (generate with 'make install' in the bin directory)
 #install( TARGETS ${FINDING_CLUMPS_EXE} DESTINATION bin )
