--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,6 +1,3 @@
-## Dependencies
-find_package( dlib )
-
 set( INCLUDES ../report ../mc ../features ../data ../segmentation)
 
 set( LIBS ${MC_LIB}  )
@@ -10,9 +7,8 @@ add_definitions(-ftemplate-backtrace-limit=0)
 ### Generate the MC Pipeline executable
 add_executable( MC_pipeline  MC_pipeline.cpp )
 target_include_directories( MC_pipeline PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
-target_link_libraries( MC_pipeline ${LIBS} stdc++fs )
+target_link_libraries( MC_pipeline ${LIBS} stdc++fs CONAN_PKG::dlib )
 target_compile_features( MC_pipeline PRIVATE cxx_std_17)
-add_dependencies(MC_pipeline dlib fmt )
 
 ### Generate the feature scoring executable
 #add_executable( markovian_features_scoring  markovian_features_analysis.cpp )
@@ -26,7 +22,6 @@ add_executable( segmentation segmentation.cpp )
 target_include_directories( segmentation PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
 target_link_libraries( segmentation PRIVATE  ${LIBS} ${SEGMENTATION_LIB}    )
 target_compile_features( segmentation PRIVATE cxx_std_17)
-add_dependencies(segmentation dlib fmt )
 
 
 ### Segmentation
@@ -34,7 +29,6 @@ add_executable( confusionMatrix confusionMatrix.cpp )
 target_include_directories( confusionMatrix PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
 target_link_libraries( confusionMatrix PRIVATE  ${LIBS}    )
 target_compile_features( confusionMatrix PRIVATE cxx_std_17)
-add_dependencies(confusionMatrix dlib fmt )
 
 
 ### Protein Time Series Generator
@@ -42,7 +36,6 @@ add_executable( protein2ts protein2ts.cpp )
 target_include_directories( protein2ts PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
 target_link_libraries( protein2ts PRIVATE  ${LIBS} )
 target_compile_features( protein2ts PRIVATE cxx_std_17)
-add_dependencies(protein2ts fmt)
 
 # Install the executable (generate with 'make install' in the bin directory)
 #install( TARGETS ${FINDING_CLUMPS_EXE} DESTINATION bin )
