--- a/src/report/CMakeLists.txt
+++ b/src/report/CMakeLists.txt
@@ -14,12 +14,11 @@ set( REPORT_SOURCES
 set( REPORT_LIB report_lib )
 
 add_library( ${REPORT_LIB} STATIC  ${REPORT_INCLUDES} ${REPORT_SOURCES} )
-add_dependencies(${REPORT_LIB}  fmt )
 
 target_include_directories( ${REPORT_LIB} PUBLIC .
         ${CMAKE_SOURCE_DIR}/src/include
         ${EXTERNAL_INSTALL_LOCATION}/include
         ${CMAKE_SOURCE_DIR}/src/data )
 
-target_link_libraries( ${REPORT_LIB} INTERFACE fmt-header-only stdc++fs )
+target_link_libraries( ${REPORT_LIB} INTERFACE CONAN_PKG::fmt stdc++fs )
 target_compile_features( ${REPORT_LIB} INTERFACE cxx_std_17)
