--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -7,7 +7,7 @@ add_definitions( -ftemplate-backtrace-limit=0 )
 ### Generate the MC Pipeline executable
 add_executable( MC_pipeline MC_pipeline.cpp )
 target_include_directories( MC_pipeline PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
-target_link_libraries( MC_pipeline ${LIBS} stdc++fs CONAN_PKG::dlib )
+target_link_libraries( MC_pipeline ${LIBS} stdc++fs ${CONAN_LIBS})
 target_compile_features( MC_pipeline PRIVATE cxx_std_17 )
 
 ### Generate the feature scoring executable
@@ -20,21 +20,21 @@ target_compile_features( MC_pipeline PRIVATE cxx_std_17 )
 ### Confusion Matrix Test
 add_executable( segmentation segmentation.cpp )
 target_include_directories( segmentation PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
-target_link_libraries( segmentation PRIVATE ${LIBS} ${SEGMENTATION_LIB} )
+target_link_libraries( segmentation PRIVATE ${LIBS} ${SEGMENTATION_LIB} ${CONAN_LIBS})
 target_compile_features( segmentation PRIVATE cxx_std_17 )
 
 
 ### Segmentation
-add_executable( confusionMatrix confusionMatrix.cpp )
-target_include_directories( confusionMatrix PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
-target_link_libraries( confusionMatrix PRIVATE ${LIBS} )
-target_compile_features( confusionMatrix PRIVATE cxx_std_17 )
+#add_executable( confusionMatrix confusionMatrix.cpp )
+#target_include_directories( confusionMatrix PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
+#target_link_libraries( confusionMatrix PRIVATE ${LIBS} ${CONAN_LIBS})
+#target_compile_features( confusionMatrix PRIVATE cxx_std_17 )
 
 
 ### Protein Time Series Generator
 add_executable( protein2ts protein2ts.cpp )
 target_include_directories( protein2ts PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
-target_link_libraries( protein2ts PRIVATE ${LIBS} )
+target_link_libraries( protein2ts PRIVATE ${LIBS} ${CONAN_LIBS})
 target_compile_features( protein2ts PRIVATE cxx_std_17 )
 
 # Install the executable (generate with 'make install' in the bin directory)
